syntax = "proto2";
package affiliate;
option go_package = "etop.vn/backend/pb/etop/affiliate";

import "protoc-gen-swagger/options/annotations.proto";
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "eTop API: Sale";
version:"v1"
};
};

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = true;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "common/common.proto";
import "etop/etc/status3/status.proto";

service MiscService {
    rpc VersionInfo(cm.Empty) returns (cm.VersionInfoResponse);
}

service AccountService {
    rpc RegisterAffiliate (RegisterAffiliateRequest) returns (Affiliate);
    rpc UpdateAffiliate (UpdateAffiliateRequest) returns (Affiliate);
    rpc DeleteAffiliate (cm.IDRequest) returns (cm.Empty);
}

message Affiliate {
    optional int64 id = 1 [(gogoproto.nullable) = false];
    optional string name = 2 [(gogoproto.nullable) = false];
    optional status3.Status status = 3 [(gogoproto.nullable) = false];
    optional bool is_test = 4 [(gogoproto.nullable) = false];
    optional string phone = 5 [(gogoproto.nullable) = false];
    optional string email = 6 [(gogoproto.nullable) = false];
}

message RegisterAffiliateRequest {
    // @required
    optional string name = 1 [(gogoproto.nullable) = false];
    optional string phone = 2 [(gogoproto.nullable) = false];
    optional string email = 3 [(gogoproto.nullable) = false];
}

message UpdateAffiliateRequest {
    optional string name = 2 [(gogoproto.nullable) = false];
    optional string phone = 3 [(gogoproto.nullable) = false];
    optional string email = 4 [(gogoproto.nullable) = false];
}
